[gd_scene load_steps=56 format=3 uid="uid://cvgcls3cqffwy"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_ipuk8"]
[ext_resource type="Texture2D" uid="uid://l7ihaw1vdcyq" path="res://Textures/Player/TNT_Purple.png" id="2_o11j3"]
[ext_resource type="Texture2D" uid="uid://b3cd2gc1g76uo" path="res://Textures/Player/Dead.png" id="2_y7pqn"]
[ext_resource type="PackedScene" uid="uid://boojmdk820qcx" path="res://Utility/hurt_box.tscn" id="3_8bjq5"]
[ext_resource type="Texture2D" uid="uid://0rs7ygt861a4" path="res://Textures/Player/TNT_Purple2_thrown.png" id="4_gu48h"]
[ext_resource type="Texture2D" uid="uid://bouc0t0mo11nf" path="res://Textures/GUI/bar background.png" id="4_sd4jk"]
[ext_resource type="Texture2D" uid="uid://ldollb42yf1n" path="res://Textures/GUI/exp-bar.png" id="5_a2fpr"]
[ext_resource type="FontFile" uid="uid://bxc8s2lojtim4" path="res://Font/CorrectionBrush-ywW7Y.ttf" id="6_imoee"]
[ext_resource type="AudioStream" uid="uid://bm5tdlnxdjv1q" path="res://Audio/SoundEffect/levelup.ogg" id="7_6o0mn"]
[ext_resource type="Texture2D" uid="uid://wf3vvin1frke" path="res://Textures/GUI/Carved_3Slides.png" id="7_8tfj1"]
[ext_resource type="Texture2D" uid="uid://cpx3kn53c6fdj" path="res://Textures/GUI/health-bar.png" id="9_rnphn"]
[ext_resource type="Texture2D" uid="uid://bepd5h8otuy2o" path="res://Textures/GUI/Carved_9Slides.png" id="11_cykeh"]
[ext_resource type="FontFile" uid="uid://ca4en6mqmcvdd" path="res://Font/Ronysiswadi14-z82L3.ttf" id="11_qscsg"]
[ext_resource type="AudioStream" uid="uid://88wr7u1vqycs" path="res://Audio/SoundEffect/Victory.wav" id="12_ly8a3"]
[ext_resource type="AudioStream" uid="uid://dn1jtnpbnh7j2" path="res://Audio/SoundEffect/Lose.ogg" id="12_x3mnj"]
[ext_resource type="PackedScene" uid="uid://balru7lvyblj1" path="res://Utility/basic_button.tscn" id="14_rxu7v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_my5s8"]
atlas = ExtResource("2_y7pqn")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ul8c"]
atlas = ExtResource("2_y7pqn")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofp2q"]
atlas = ExtResource("2_y7pqn")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xprft"]
atlas = ExtResource("2_y7pqn")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0dri"]
atlas = ExtResource("2_y7pqn")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt78v"]
atlas = ExtResource("2_y7pqn")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s564o"]
atlas = ExtResource("2_y7pqn")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw4ge"]
atlas = ExtResource("2_y7pqn")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_41l5r"]
atlas = ExtResource("2_y7pqn")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wexmw"]
atlas = ExtResource("2_y7pqn")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_24cc7"]
atlas = ExtResource("2_y7pqn")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi7ld"]
atlas = ExtResource("2_y7pqn")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjna3"]
atlas = ExtResource("2_y7pqn")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_di8is"]
atlas = ExtResource("2_y7pqn")
region = Rect2(768, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk51y"]
atlas = ExtResource("2_o11j3")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2elxs"]
atlas = ExtResource("2_o11j3")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua327"]
atlas = ExtResource("2_o11j3")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6xqa"]
atlas = ExtResource("2_o11j3")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv20f"]
atlas = ExtResource("2_o11j3")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_127ae"]
atlas = ExtResource("2_o11j3")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_k085e"]
atlas = ExtResource("2_o11j3")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk63t"]
atlas = ExtResource("2_o11j3")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_icgtc"]
atlas = ExtResource("2_o11j3")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wulre"]
atlas = ExtResource("2_o11j3")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlc1s"]
atlas = ExtResource("2_o11j3")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gakfm"]
atlas = ExtResource("2_o11j3")
region = Rect2(960, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1dp4"]
atlas = ExtResource("4_gu48h")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl77d"]
atlas = ExtResource("4_gu48h")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8boi"]
atlas = ExtResource("4_gu48h")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukac0"]
atlas = ExtResource("4_gu48h")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpujs"]
atlas = ExtResource("4_gu48h")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjjia"]
atlas = ExtResource("4_gu48h")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxaqr"]
atlas = ExtResource("4_gu48h")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_jhahd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_my5s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ul8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofp2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xprft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0dri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt78v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s564o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw4ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41l5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wexmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24cc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi7ld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjna3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di8is")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 0.4,
"texture": SubResource("AtlasTexture_vk51y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2elxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua327")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6xqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv20f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_127ae")
}],
"loop": false,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k085e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk63t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icgtc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wulre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlc1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gakfm")
}],
"loop": false,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1dp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl77d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8boi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukac0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpujs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjjia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxaqr")
}],
"loop": false,
"name": &"throw",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vvedd"]
radius = 14.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oc7rm"]
radius = 14.0
height = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gyrhi"]
radius = 1096.01

[sub_resource type="CircleShape2D" id="CircleShape2D_od2wq"]
radius = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5hscq"]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
texture_filter = 2
script = ExtResource("1_ipuk8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 2
sprite_frames = SubResource("SpriteFrames_jhahd")
animation = &"dead"
autoplay = "idle"
frame = 13
frame_progress = 1.0

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_vvedd")

[node name="HurtBox" parent="." instance=ExtResource("3_8bjq5")]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_oc7rm")

[node name="Attack" type="Node2D" parent="."]

[node name="DynamiteTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="DynamiteAttackTimer" type="Timer" parent="Attack/DynamiteTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="BarrelTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="BarrelAttackTimer" type="Timer" parent="Attack/BarrelTimer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="SheepBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 12
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_gyrhi")

[node name="GrabArea" type="Area2D" parent="." groups=["loot"]]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_od2wq")

[node name="CollectArea" type="Area2D" parent="." groups=["loot"]]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_5hscq")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 50.0
offset_right = 340.0
offset_bottom = 90.0
texture_under = ExtResource("4_sd4jk")
texture_progress = ExtResource("5_a2fpr")

[node name="Lbl_level" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 0
offset_left = 205.0
offset_top = 1.0
offset_right = 319.0
offset_bottom = 36.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_imoee")
theme_override_font_sizes/font_size = 27
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = -0.501
anchor_top = -0.497
anchor_right = -0.501
anchor_bottom = -0.497
offset_left = 2555.28
offset_top = 606.84
offset_right = 2955.28
offset_bottom = 1106.84

[node name="TextureRect" type="TextureRect" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_left = 104.0
offset_top = 17.0
offset_right = 296.0
offset_bottom = 81.0
texture = ExtResource("7_8tfj1")

[node name="Lbl_LevelUp" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_imoee")
theme_override_font_sizes/font_size = 40
text = "Level Up!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 380.0
offset_bottom = 200.0

[node name="snd_LevelUp" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
stream = ExtResource("7_6o0mn")
volume_db = -15.0

[node name="DeathPanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
texture_filter = 2
layout_mode = 1
anchors_preset = -1
offset_left = 2322.0
offset_top = 1067.0
offset_right = 2722.0
offset_bottom = 1673.0

[node name="TextureRect" type="TextureRect" parent="GUILayer/GUI/DeathPanel"]
layout_mode = 0
offset_left = 23.0
offset_top = 12.0
offset_right = 379.0
offset_bottom = 204.0
texture = ExtResource("11_cykeh")

[node name="result_info" type="TextureRect" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 26.0
offset_top = 258.0
offset_right = 382.0
offset_bottom = 450.0
texture = ExtResource("11_cykeh")

[node name="menu_texture" type="TextureRect" parent="GUILayer/GUI/DeathPanel"]
layout_mode = 0
offset_left = 84.0
offset_top = 508.0
offset_right = 321.0
offset_bottom = 597.0
texture = ExtResource("7_8tfj1")

[node name="Lbl_Result" type="Label" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 31.0
offset_top = 23.0
offset_right = 372.0
offset_bottom = 194.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_imoee")
theme_override_font_sizes/font_size = 30
text = "Result
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Lbl_info" type="Label" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 42.0
offset_top = 265.0
offset_right = 365.0
offset_bottom = 433.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_imoee")
theme_override_font_sizes/font_size = 30
text = "Result
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Lbl_Menu" type="Label" parent="GUILayer/GUI/DeathPanel"]
layout_mode = 0
offset_left = -1.0
offset_top = 502.0
offset_right = 399.0
offset_bottom = 602.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_imoee")
theme_override_font_sizes/font_size = 40
text = "Menu
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="snd_lose" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("12_x3mnj")
volume_db = -15.0

[node name="snd_victory" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("12_ly8a3")
volume_db = -15.0

[node name="btn_menu" parent="GUILayer/GUI/DeathPanel" instance=ExtResource("14_rxu7v")]
modulate = Color(1, 1, 1, 0.290196)
layout_mode = 0
offset_left = 69.0
offset_top = 504.0
offset_right = 342.0
offset_bottom = 603.0

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 336.0
offset_bottom = 48.0
step = 0.0
value = 100.0
texture_under = ExtResource("4_sd4jk")
texture_progress = ExtResource("9_rnphn")

[node name="Lbl_health" type="Label" parent="GUILayer/GUI/HealthBar"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 0
offset_left = 216.0
offset_right = 318.0
offset_bottom = 33.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_qscsg")
theme_override_font_sizes/font_size = 25
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblTimer" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 0
offset_left = 1450.0
offset_top = 2.0
offset_right = 1570.0
offset_bottom = 54.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_qscsg")
theme_override_font_sizes/font_size = 40
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectedWeapons" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 340.0
offset_top = 8.0
offset_right = 540.0
offset_bottom = 43.0
columns = 10

[node name="CollectedUpgrades" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 340.0
offset_top = 50.0
offset_right = 540.0
offset_bottom = 85.0
columns = 10

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/DynamiteTimer" to="." method="_on_dynamite_timer_timeout"]
[connection signal="timeout" from="Attack/DynamiteTimer/DynamiteAttackTimer" to="." method="_on_dynamite_attack_timer_timeout"]
[connection signal="timeout" from="Attack/BarrelTimer" to="." method="_on_barrel_timer_timeout"]
[connection signal="timeout" from="Attack/BarrelTimer/BarrelAttackTimer" to="." method="_on_barrel_attack_timer_timeout"]
[connection signal="area_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_area_entered"]
[connection signal="area_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_area_exited"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="click_end" from="GUILayer/GUI/DeathPanel/btn_menu" to="." method="_on_btn_menu_click_end"]

[editable path="HurtBox"]
